Refactor Part 1
