# internal/controller/http/v1/router.go
@@ -23,7 +23,7 @@ import (
 // @version     1.0
 // @host        localhost:8080
 // @BasePath    /v1.
-func NewRouter(handler *gin.Engine, l logger.Interface, t usecase.Translation, r usecase.Raffle, s usecase.Steam) {
+func NewRouter(handler *gin.Engine, l logger.Interface, r usecase.Raffle, s usecase.Steam) {
 	// Options
 	handler.Use(gin.Logger())
 	handler.Use(gin.Recovery())
@@ -42,7 +42,6 @@ func NewRouter(handler *gin.Engine, l logger.Interface, t usecase.Translation, r
 	// Routers
 	h := handler.Group("/v1")
 	{
-		newTranslationRoutes(h, t, l)
 		newRaffleRoutes(h, r, l)
 		newSteamRoutes(h, s, l)
 	}
